--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TestProjectDbEntities": "Server=.;Database=TestProjectOne;UID=sa;PWD=sujan;Integrated Security=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "TestProjectDbEntities": "Server=.;Database=TestProject;UID=sa;PWD=sujan;Integrated Security=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
